--- a/src/assets/scss/_font.scss
+++ b/src/assets/scss/_font.scss
@@ -1,11 +1,11 @@
-@mixin fontFace($family, $index){
-  $path: '../fonts/' + $family;
-  @font-face {
-    font-family: 'SUITE';
-    font-weight: calc($index * 100);
-    src: 
-    url($path+'.otf') format('opentype'),
-    url($path+'.woff2') format('woff2'),
-    url($path+'.ttf') format('truetype');
-  }
-}
+// @mixin fontFace($family, $index){
+//   $path: '../fonts/' + $family;
+//   @font-face {
+//     font-family: 'SUITE';
+//     font-weight: calc($index * 100);
+//     src: 
+//     url($path+'.otf') format('opentype'),
+//     url($path+'.woff2') format('woff2'),
+//     url($path+'.ttf') format('truetype');
+//   }
+// }
